[#128] api-server: endpoint to check credentials
The frontend keeps the token as a session variable. It needs a way to
quickly check if the token is still valid or not. That would be useful
to automatically detect when to retrigger a login.
